* 2 Jun 2005 -- 2.4.0 Release Candidate 5 Released
**************************************************************************

**************************************************************************
* 9 Jun 2005 -- 2.4.0 Released
**************************************************************************

**************************************************************************
* Changes in late June 2005
**************************************************************************

(271) Added an RPM spec file based on the one shipped with SuSE 9.3.

(272) Implemented Joe Krahn's "Input Devices" code--at the moment, a dial
box.

(273) Fixed a bug in the Sierpinski sponge code that caused the application
to crash if it called the code with a negative number of levels

(274) Added separate static and DLL versions of all the demonstration
programs under Windows.

(275) Added --enable-debug configure flag. Currently it only turns on X11
event tracing, but in the future we could add more.

(276) Cleaned up CreateNotify/ConfigureNotify handling.

(277) When a window is iconified, only an UnmapNotify is sent, not a
VisibilityNotify, so we have to handle the window status callback in the
former case, too. This fixes bug #763442 (Call the visibility callback when
minimizing a window).

**************************************************************************
* Changes on July 1, 2005.
**************************************************************************

(278) Removed redundant files from EXTRA_DIST.

(279) MinGW is lacking a prototype for ChangeDisplaySettingsEx, so
supply one in this case. Note that this should better be handled via
autoconf than via cpp.

(280) Silenced a signed/unsigned mismatched via a cast.

(281) Some steps toward compilation under MinGW. Note that there are still
linking troubles for the examples.

(282) Remove wrong "execute" bits when creating a distribution. This
fixes bug #961938 (Executable bit set on non exe files).